--- a/Sandbox/.project
+++ b/Sandbox/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Sandbox</name>
+	<name>Sandbox-251a</name>
 	<comment></comment>
 	<projects>
 	</projects>
